--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: url(https://bossdesign.ca/wp-content/uploads/2020/06/Modern-Mecca-splash-web.jpg);
-  /* linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), */
+  background-image:url(https://bossdesign.ca/wp-content/uploads/2020/06/Modern-Mecca-splash-web.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -63,12 +62,27 @@
   text-align: center;
   color: #fff;
   background-color: #1f1c1c6c;
-  padding: 20px;
 }
 .content h1 {
   font-family: "Spartan", sans-serif;
-  font-size: 40px;
+  font-size: 70px;
+  margin-top: 80px;
 }
 .content p {
+  margin: 20px auto;
+  line-height: 25px;
+}
+
+button{
+  width: 200px;
+  padding:15px 0;
+  margin: 20px 10px;
+  text-align: center;
+  font-weight: bold;
   font-size: 18px;
+  border-radius: 25px;
+  border: 2px solid #009688;
+  background: transparent;
+  color: #fff;
+  cursor: pointer;
 }
