--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,11 @@
 }
 .content h1 {
   font-family: "Spartan", sans-serif;
-  font-size: 70px;
+  font-size: 50px;
   margin-top: 80px;
+  text-transform: uppercase;
+  word-spacing: 40px;
+  letter-spacing: 10px;
 }
 .content p {
   margin: 20px auto;
@@ -85,4 +88,23 @@ button{
   background: transparent;
   color: #fff;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+span{
+  background-color: #009688;
+  height: 100%;
+  width: 0;
+  border-radius: 25px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  transition: 1s;
+}
+button:hover span{
+  width: 100%;
+}
+button:hover{
+  border:none
 }
