--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
   content: "";
   height: 5px;
   width: 0;
-  background: #6c442c;
+  background: #3b9ce0;
   position: absolute;
   left: 0;
   bottom: -10px;
@@ -84,7 +84,7 @@ button{
   font-weight: bold;
   font-size: 18px;
   border-radius: 40px;
-  border: 2px solid #6c442c;
+  border: 2px solid #3b9ce0;
   background: transparent;
   color: #fff;
   cursor: pointer;
@@ -92,7 +92,7 @@ button{
   overflow: hidden;
 }
 span{
-  background-color: #6c442c;
+  background-color: #3b9ce0;
   height: 100%;
   width: 0;
   border-radius: 25px;
