--- a/css/style.css
+++ b/css/style.css
@@ -2,30 +2,38 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-/* Similar code end */
 
+/* Similar code end */
 .banner {
   width: 100%;
   height: 100vh;
-  background-image:url(https://bossdesign.ca/wp-content/uploads/2020/06/Modern-Mecca-splash-web.jpg);
+  background-image: url(https://bossdesign.ca/wp-content/uploads/2020/06/Modern-Mecca-splash-web.jpg);
   background-size: cover;
   background-position: center;
-}
-.nav__bar {
-  width: 85%;
-  margin: auto;
-  padding: 35px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .logo {
   width: 120px;
   cursor: pointer;
+}
+
+.nav__bar {
+  width: 85%;
+  margin: auto;
+  padding: 35px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .nav__bar ul li {
@@ -34,6 +42,7 @@
   margin: 0 20px;
   position: relative;
 }
+
 .nav__bar ul li a {
   text-decoration: none;
   color: #fff;
@@ -48,9 +57,11 @@
   position: absolute;
   left: 0;
   bottom: -10px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
-.nav__bar ul li:hover::after {
+
+.nav__bar ul li :hover::after {
   width: 100%;
 }
 
@@ -58,11 +69,13 @@
   width: 100%;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   text-align: center;
   color: #fff;
   background-color: #1f1c1c6c;
 }
+
 .content h1 {
   font-family: "Spartan", sans-serif;
   font-size: 50px;
@@ -71,14 +84,15 @@
   word-spacing: 40px;
   letter-spacing: 10px;
 }
+
 .content p {
   margin: 20px auto;
   line-height: 25px;
 }
 
-button{
+.content button {
   width: 200px;
-  padding:15px 0;
+  padding: 15px 0;
   margin: 20px 10px;
   text-align: center;
   font-weight: bold;
@@ -91,7 +105,8 @@ button{
   position: relative;
   overflow: hidden;
 }
-span{
+
+.content button span {
   background-color: #3b9ce0;
   height: 100%;
   width: 0;
@@ -100,11 +115,15 @@ span{
   left: 0;
   bottom: 0;
   z-index: -1;
+  -webkit-transition: 1s;
   transition: 1s;
 }
-button:hover span{
+
+.content button:hover {
+  border: none;
+}
+
+.content button:hover span {
   width: 100%;
 }
-button:hover{
-  border:none
-}
+/*# sourceMappingURL=style.css.map */
